# lib-flashcard

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2019-01-28-033759_create_database/: down.sql  up.sql
migrations/2019-11-27-205950_flashcard/: down.sql  up.sql
src/: card.rs  db.rs  deck.rs  game.rs  lib.rs  schema.rs
src/http/: card.rs  deck.rs  game.rs  mod.rs
tests/: card.rs  deck.rs  game.rs
