[package]
name = "lib_flashcard"
version = "0.1.0"
authors = ["WebeWizard <webewizard@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.3", features = ["mysql", "chrono", "r2d2"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
r2d2 = "0.8.7"

webe_id = "0.1.1"
webe_auth = {path = "../lib-webe/webe_auth"}
webe_web = {path = "../lib-webe/webe_web"}

[replace]
"diesel:1.4.3" = { git = "https://github.com/diesel-rs/diesel", features = ["mysql", "chrono", "r2d2"] }
"diesel_derives:1.4.1" = { git = "https://github.com/diesel-rs/diesel"}


[dev-dependencies]
dotenv = "0.15.0"
